--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>07_LineSegments</title>
+    <title>10_CameraCircle</title>
     <style>
         body {
             margin: 0;
@@ -13,7 +13,7 @@
 </head>
 <body>
     <canvas id="glCanvas"></canvas>
-    <script src="/util/gl-matrix-min.js"></script>
+    <script src="../util/gl-matrix-min.js"></script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
